# quanttide-data-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/contributing/: architecture.md
examples/: catalog.py
quanttide_data/: config.py  crawlers.py  default_settings.yml  processors.py  test.py
quanttide_data/datasets/: __init__.py  datasets.py  records.py  schemas.py
tests/datasets/: test_datasets.py
