[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quanttide-data"
version = "0.1.0-beta.2"
description = "量潮数据工程Python工具包"
authors = ["QuantTide <opensource@quanttide.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "quanttide_data"}]

[tool.poetry.dependencies]
python = "^3.7"
# logging
logdecorator = "^2.4"
# crawler
requests = { version = "^2.31.0"}
beautifulsoup4 = { version = "^4.12.2"}


[tool.poetry.group.dev.dependencies]
# bugfix for poetry
urllib3 = "<2.0"
pytest = "^7.3.1"
coverage = "^7.2.6"
